@@ -8,6 +8,9 @@ import java.io.StringWriter;
 import java.nio.file.Path;
 import java.util.spi.ToolProvider;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import com.github.gv2011.jctrl.service.JCtrlServiceMarker;
 import com.github.gv2011.jctrl.service.Main;
 import com.github.gv2011.m2t.ArtifactId;
@@ -19,6 +22,8 @@ import com.github.gv2011.util.icol.IList;
 import com.github.gv2011.util.tstr.TypedString;
 
 public class ImageBuilder {
+
+  private static final Logger LOG = LoggerFactory.getLogger(ImageBuilder.class);
 
   public static void main(final String[] args) {
     try(ModulePathBuilder mpb = new ModulePathBuilder(M2tFactory.INSTANCE.get().create())){
@@ -35,7 +40,9 @@ public class ImageBuilder {
   public void buildImage(final ArtifactId artifactId){
     final ArtifactMarker marker = new JCtrlServiceMarker();
     final ArtifactRef artifactRef = marker.artifactRef();
-    final String modulePath = toString(mpb.getAllJars(artifactRef));
+    final IList<Path> allJars = mpb.getAllJars(artifactRef);
+    LOG.info("Module Path:\n  {}", allJars.stream().map(Path::toString).collect(joining("\n  ")));
+    final String modulePath = toString(allJars);
 
     final ToolProvider tp = ToolProvider.findFirst("jlink").get();
     final StringWriter swOut = new StringWriter();
@@ -51,6 +58,8 @@ public class ImageBuilder {
         "--add-modules", marker.module().getName(),
         "--add-modules", UtilModuleMarker.class.getModule().getName(),
         "--add-modules", "com.github.gv2011.util.gcol",
+        "--add-modules", "com.github.gv2011.util.beans.imp",
+        "--add-modules", "com.github.gv2011.jsong",
         "--add-modules", "ch.qos.logback.classic"
       }
     );
